# langchain-cookbook

./: README.md  pyproject.toml
chat-interface/: kimi-k2.py  messages.py  persona.py
composition/: imperative-composition.py
llm-interface/: invoke-llm.py
output_parsers/: csv_parser.py
prompt_templates/: chat_prompt.py  prompt_template.py  template.py
rag/: CoIBERT_Wikipedia.py  multi_vector_retriever_rag.py  rag-pdf.py
rag-chat/: chat-pdf-rag.py
rag/document-loader/: pdf-loader.py  raw-text.txt  text-loader.py  web-loader.py
rag/embedding/: ollama-embedding.py
rag/splitter/: language-text-splitter.py  python-sample.py  text-splitter.py
runnable_interface/: batch_interface.py  invoke_interface.py  stream_interface.py
structured_output/: json_output.py  justification.py  poem.json
